// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VPAuthorizationPage matches snapshot when CredentialRequestModal is visible (trusted flow) 1`] = `
<DocumentFragment>
  <div
    class="flex min-h-screen bg-gray-50"
  >
    <div
      class="flex-shrink-0"
    >
      <div
        data-testid="mock-sidebar"
      >
        Sidebar
      </div>
    </div>
    <div
      class="flex-1 flex flex-col items-center justify-center relative"
    >
      <div
        data-testid="modal-credential-request"
      >
        <span>
          Request for Trusted Verifier
        </span>
        <button
          data-testid="btn-cr-cancel"
        >
          CR-Cancel
        </button>
        <button
          data-testid="btn-cr-consent"
        >
          CR-Consent
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VPAuthorizationPage matches snapshot when TrustVerifierModal is visible (untrusted flow) 1`] = `
<DocumentFragment>
  <div
    class="flex min-h-screen bg-gray-50"
  >
    <div
      class="flex-shrink-0"
    >
      <div
        data-testid="mock-sidebar"
      >
        Sidebar
      </div>
    </div>
    <div
      class="flex-1 flex flex-col items-center justify-center relative"
    >
      <div
        data-testid="modal-trust-verifier"
      >
        <span>
          Untrusted Verifier
        </span>
        <button
          data-testid="btn-trust-verifier"
        >
          Trust
        </button>
        <button
          data-testid="btn-not-trust-verifier"
        >
          Not Trust
        </button>
        <button
          data-testid="btn-btn-cancel-trust-modal"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
